# cmd/api/application.go
@@ -20,9 +20,11 @@ import (
 	_ "github.com/linenxing/e-commerce-system/docs/swagger"
 	"github.com/linenxing/e-commerce-system/middlewares"
 	authservice "github.com/linenxing/e-commerce-system/services/auth"
+	campaignservice "github.com/linenxing/e-commerce-system/services/campaign"
 	cartservice "github.com/linenxing/e-commerce-system/services/cart"
 	orderservice "github.com/linenxing/e-commerce-system/services/order"
 	productservice "github.com/linenxing/e-commerce-system/services/product"
+	campaignstore "github.com/linenxing/e-commerce-system/stores/campaign"
 	cartstore "github.com/linenxing/e-commerce-system/stores/cart"
 	orderstore "github.com/linenxing/e-commerce-system/stores/order"
 	productstore "github.com/linenxing/e-commerce-system/stores/product"
@@ -61,14 +63,17 @@ func NewApplication(ctx context.Context, cfg config.Config, log zerolog.Logger) 
 	productStore := productstore.NewPostgresStore(db)
 	cartStore := cartstore.NewPostgresStore(db)
 	orderStore := orderstore.NewPostgresStore(db)
+	campaignStore := campaignstore.NewPostgresStore(db)
 	authService := authservice.New(userStore, tokenManager, passwordManager)
 	productService := productservice.New(productStore)
 	cartService := cartservice.New(cartStore, productStore)
 	orderService := orderservice.New(db, orderStore)
+	campaignService := campaignservice.New(campaignStore)
 	authAPI := apis.NewAuthAPI(authService)
 	productAPI := apis.NewProductAPI(productService)
 	cartAPI := apis.NewCartAPI(cartService)
 	orderAPI := apis.NewOrderAPI(orderService)
+	campaignAPI := apis.NewCampaignAPI(campaignService)
 
 	router := gin.New()
 	router.Use(middlewares.RequestLogger(log), middlewares.Recovery())
@@ -78,6 +83,7 @@ func NewApplication(ctx context.Context, cfg config.Config, log zerolog.Logger) 
 	productAPI.RegisterRoutes(router, authMiddleware, middlewares.RequireRole("admin"))
 	cartAPI.RegisterRoutes(router, authMiddleware)
 	orderAPI.RegisterRoutes(router, authMiddleware)
+	campaignAPI.RegisterRoutes(router, authMiddleware, middlewares.RequireRole("admin"))
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	return &Application{
